Removing fcurves/animated transform channels does not work #60086

Closed
opened 2019-01-02 20:57:22 +01:00 by lucas veber · 17 comments

System Information
Operating system: Win10
Graphics card: Gtx 980

Blender Version
Broken: latest 2.8 build

Short description of error
Removing fcurves by script or directly from the interface (right click on the transform channels > Clear Keyframes) does not work

Exact steps for others to reproduce the error

  • Open the attached blend file
    anim_scale.blend
  • The armature object has keyframes on Loc, Rot, Scale. Click Run Script in the text editor to remove all scale keyframes or right click the Scale transform channels > Clear Keyframes
  • Go to another frame, try to change the scale value: it won't work, the scale keyframes are still there although they're removed from the action/fcurves editor views.
**System Information** Operating system: Win10 Graphics card: Gtx 980 **Blender Version** Broken: latest 2.8 build **Short description of error** Removing fcurves by script or directly from the interface (right click on the transform channels > Clear Keyframes) does not work **Exact steps for others to reproduce the error** - Open the attached blend file [anim_scale.blend](https://archive.blender.org/developer/F6153477/anim_scale.blend) - The armature object has keyframes on Loc, Rot, Scale. Click Run Script in the text editor to remove all scale keyframes or right click the Scale transform channels > Clear Keyframes - Go to another frame, try to change the scale value: it won't work, the scale keyframes are still there although they're removed from the action/fcurves editor views.
Author

Added subscriber: @LucasVeber

Added subscriber: @LucasVeber

#61986 was marked as duplicate of this issue

#61986 was marked as duplicate of this issue

#61451 was marked as duplicate of this issue

#61451 was marked as duplicate of this issue

#61100 was marked as duplicate of this issue

#61100 was marked as duplicate of this issue
lucas veber changed title from Removing fcurves/animated transform channels do not work to Removing fcurves/animated transform channels does not work 2019-01-02 20:58:37 +01:00

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can only reproduce this if I use your script. When you write "Clear Keyframes" do you mean "Delete channels?" I do not get and "Clear keyframes" option if I right click the X scale channel.

I can only reproduce this if I use your script. When you write "Clear Keyframes" do you mean "Delete channels?" I do not get and "Clear keyframes" option if I right click the X scale channel.
Author

"Clear Keyframes" is in the contextual menu when right clicking the Scale transform in the property panel of the viewport:
2.png

"Clear Keyframes" is in the contextual menu when right clicking the Scale transform in the property panel of the viewport: ![2.png](https://archive.blender.org/developer/F6391160/2.png)
Author

It's basically an update problem, the update can be triggered for example by unlinking-relinking the action from the armature.

It's basically an update problem, the update can be triggered for example by unlinking-relinking the action from the armature.
Joshua Leung was assigned by Sebastian Parborg 2019-01-24 17:59:37 +01:00

Ah, thought you meant in the dope sheet, my bad. ><

Ah, thought you meant in the dope sheet, my bad. ><

Added subscriber: @BaranYagcioglu

Added subscriber: @BaranYagcioglu

Added subscriber: @Leon95

Added subscriber: @Leon95

Added subscriber: @HenriqueGonzaga

Added subscriber: @HenriqueGonzaga

Added subscriber: @DavidGayerie

Added subscriber: @DavidGayerie

This issue was referenced by 50a8a95ce3

This issue was referenced by 50a8a95ce3f88303f29fa8839ef37b372df5ce49

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

Most of this issue was already fixed it appears, I only fixed some missing refresh when using the Python API.

Most of this issue was already fixed it appears, I only fixed some missing refresh when using the Python API.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60086
No description provided.