Fix T60086: missing update when removing fcurves from Python API.